fix spacing and additional smoke

--- a/src/scss/base/_scaffolding.scss
+++ b/src/scss/base/_scaffolding.scss
@@ -18,7 +18,7 @@ html {
 	justify-content: space-between;
 	position: relative;
 
-	@include media('<=tabletHorizontal') {
+	@include media('<=1300') {
 		justify-content: flex-start;
 		min-height: auto;
 	}
